--- a/index.html
+++ b/index.html
@@ -5724,7 +5724,7 @@ var $author$project$Main$view = function (state) {
 							]),
 						_List_fromArray(
 							[
-								$elm$html$Html$text('Computational verification of divisibility using mathematical rules')
+								$elm$html$Html$text('Computational verification of divisibility using divisibility rules')
 							]))
 					])),
 				A2(
@@ -5813,7 +5813,7 @@ var $author$project$Main$view = function (state) {
 									]),
 								_List_fromArray(
 									[
-										$elm$html$Html$text('Mathematical Rules Applied')
+										$elm$html$Html$text('Divisibility Rules Applied')
 									])),
 								A2(
 								$elm$html$Html$div,
